Add java.xml.bind modules to CHAT runner